examples/test/testpolicy8272.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8272
  namespace: namespace132
spec:
  podSelector:
    matchLabels:
      key7: value2
      key42: value21
      key15: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value47
          key29: value15
          key3: value47
      podSelector:
        matchLabels:
          key11: value2
          key21: value47
